# ProjetoReceitas

./: .coveragerc  .env-example  .gitignore  pyproject.toml  pytest.ini  requirements.txt  todo
.github/workflows/: django.yaml
api/: paginator.py  urls.py
api/views/model_views/: serializer.py  urls.py
api/views/user_views/: urls.py
authors/: urls.py  views.py
base_templates/global/: base.html
base_templates/partials/: _messages.html
docs/django/flash_messages/: flash_messages.md
docs/django/orm/: orm_django.md
docs/django/pagination/: pagination.md
docs/django/settings/: settings.md
docs/django/shell/: shell.md
docs/django/staticdjango/: staticdjango.md
docs/django/template/: templates.md
docs/django/urls/: urls.md
docs/tests/: tests.md
project/: asgi.py  settings.py  urls.py  wsgi.py
project/api/: urls.py
project/api/views/: __init__.py
recipes/: admin.py  models.py  tests.py  urls.py  views.py
recipes/api/: serializer.py  urls_v2.py  urls_v3.py  urls_v4.py
recipes/migrations/: 0001_initial.py  0002_alter_category_options_alter_recipe_options_and_more.py  0002_alter_recipe_cover.py  0003_alter_category_name_alter_recipe_author_and_more.py  0004_alter_recipe_slug.py
recipes/tests/: test_base_fixture.py  test_category_model.py  test_category_view.py  test_home_view.py  test_recipe_detail_view.py  test_recipe_model.py  test_recipes_fixture.py  test_recipes_url.py  test_recipes_views.py  test_search_view.py  test_urls.py
utils/recipes/: data_factory.py  pagination.py
utils/test/: test_pagination.py
(+37 files in other folders)
